[tool.poetry]
name = "agente-con-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dotenv = "^0.9.9"
langchain = "^0.3.25"
langchain-core = "^0.3.63"
langchain-tavily = "^0.2.1"
langchain-openai = "^0.3.19"
sqlalchemy = "^2.0.41"
pypdf2 = "^3.0.1"
psycopg2-binary = "^2.9.10"
streamlit = "^1.28.0"  # Añadir Streamlit

langchain-community = "^0.3.0"  # Más flexible
langchain-postgres = "*"         # Déjalo completamente abierto
numpy = [
    {version = "^1.21.0", python = "<3.12"},
    {version = "^2.0.0", python = ">=3.12"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"